$Id$

1.0.2
 * Don't complain about non-existant ~/.owl/startup when starting. -asedeno
	
1.0.1
 * Remove an unneeded .orig file from libfaim/ - hartmans
 * Update the copyright notice in ':show license' - nelhage
 * Add a jabber:spew variable that controls whether unrecognized
   Jabber messages (such as pubsub requests) are displayed. - nelhage
 * Make the 'style' command assume the main:: package for
   unqualified subroutine references. Reported by Jesse Vincent. - nelhage
 * Rename doc/contributors to the more canonical AUTHORS - nelson

1.0.0
 * Don't fail silently when sourcing a file; actually let the user know. - asedeno
 * Only hang for 1s, rather than 10s, if there is no zhm - nelhage
 * Merge the unicode branch to trunk. BarnOwl is now unicode aware
   and can send, receive, input and display UTF-8 encoded
   messages. Unicode changelog:
   * Put glib's CFLAGS and LDFLAGS at the beginning of the corresponding
     variables. - nelhage
   * Unicode branch: Fix building without zephyr. - asedeno
   * Fix a unicode branch wordwrap problem. - asedeno
   * Fixing an obscure wrapping bug that nelhage and I tracked down. - asedeno
   * Rename configure.in to configure.ac so Debian autoconf DTRT. - nelhage
   *  Fix a bug in owl_editwin_move_to_previousword() which would skip over
       single letter words. - asedeno
   * I think I like this better. - asedeno
   * Fix nelhage's key_left bug. Don't spin at the locktext boundary. - asedeno
   * fix a typo in OWL_FMTEXT_UTF8_BGDEFAULT
   * fix a parsing issue for attributes - asedeno
   * Better compliance with UTF-8 processing. Stop trying
     to pull in a UTF-8 character as soon as we know something has gone
     wrong. - asedeno
   * Removing more hackery I left behind after doing things
     the right way. - asedeno
   * editwin.c - fix a wrapping bug I introduced in the
     last revision. It could leave us with a buffer that was not valid UTF-
     8 - asedeno