@@ -1,6 +1,8 @@
 $Id$
 
 1.0.2
+ * Fix a segfault on retrieving zephyr subs when the user doesn't
+   have any or has expired tickets. -asedeno
  * Don't complain about non-existant ~/.owl/startup when starting. -asedeno
 	
 1.0.1
